--- a/mysql.yml
+++ b/mysql.yml
@@ -1,60 +1,42 @@
-# 本地同步公共Roles
-- name: mysql
-  hosts: local
-  connection: local
-  gather_facts: False
-  pre_tasks:
-    - name: Set Git Repo
-      shell: |
-        git init
-        git config core.sparsecheckout true
-        git remote add origin https://github.com/Websoft9/ansible-roles.git
-        echo {{ item }} >> .git/info/sparse-checkout
-      args:
-        chdir: roles
-      with_items:
-        - "{{ public_roles }}"
-
-    - name: GET Public Roles
-      git:
-        repo: https://github.com/Websoft9/ansible-roles.git
-        dest: roles
-        clone: no
-
-    - name: Delete .git
-      file:
-        path: roles/.git
-        state: absent
-
 # 服务器前置任务(ubuntu使用)
-- name: mysql
-  hosts: mysql
+- name: Pre_mysql
+  hosts: all
   become: yes
   become_method: sudo
   gather_facts: False
   pre_tasks:
-   - name: Install Python
-     raw: sudo apt update && sudo apt-get -y install python
-  ignore_errors: yes
 
 
 # 核心任务
 
-- name: mysql
-  hosts: mysql
+- name: MySQL
+  hosts: all
   become: yes
   become_method: sudo
+  gather_facts: True
+  vars_prompt:
+    - name: 'mysql_version_number'
+      prompt: "Please choose the number for MySQL version \n
+      1: MySQL5.5(only for CentOS)\n
+      2: MySQL5.6(only for CentOS)\n
+      3: MySQL5.7\n
+      4: MySQL8.0(only for Ubuntu)\n"
+      private: no
+      default: 3
+
+  vars:
+    temp_ver:
+      '1': '5.5'
+      '2': '5.6'
+      '3': '5.7'
+      '4': '8.0'
+    mysql_version: "{{temp_ver[mysql_version_number]}}" 
+
   roles:
-    - { role: common , tags: "common"}  
+    - {role: common , tags: "common"}  
+    - {role: cloud , tags: "cloud"}  
     - {role: mysql, tags: "mysql"}
-    - {role: random, tags: "random"}
     - {role: docker, tags: "docker"}
     - {role: docker_phpmyadmin, tags: "docker_phpmyadmin"}
-
-
-
-
-    
-
-
-                                                                                                    
+    #- {role: initpassword, tags: "initpassword"}
+    - {role: end, tags: "end"}                                                                                     
