--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,5 +1,3 @@
----
-
 # Centos 更新 安装基础软件工具等操作
 - block:
   - name: System Upgrade
@@ -8,13 +6,6 @@
   - name: Install EPEL
     yum:
       name: epel-release
-    # template:
-    #   src: '{{item.src}}'
-    #   dest: '{{item.dest}}'
-    # with_items:
-    #   - {src: epel.repo.jinja2,dest: /etc/yum.repos.d/epel.repo}
-    #   - {src: 'RPM-GPG-KEY-EPEL-{{ansible_distribution_version}}',dest: /etc/pki/rpm-gpg/}
-
 
   - name: Disable SELinux
     selinux:
@@ -22,10 +13,11 @@
 
   - name:  temporarily disable Selinux
     shell: setenforce 0 
+    when: ansible_selinux.status != 'disabled'
 
   - name: Install Common Software
     yum: 
-      name: [yum-utils,wget,openssl,unzip,bzip2,expect,at,vim, screen,pwgen,git, htop, yum-cron,ImageMagick, goaccess,MySQL-python,python-pip]
+      name: [mosh,yum-utils,wget,openssl,unzip,bzip2,expect,at,vim, screen,pwgen,git, htop, yum-cron,ImageMagick, goaccess,python-pip,inotify-tools,python-devel]
       state: installed
     
   - name: Configuration yum-cron
@@ -48,7 +40,7 @@
 
   - name: Install Common Software
     apt: 
-      name: [curl,gnupg2,ca-certificates,lsb-release,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,imagemagick,goaccess,python3-mysqldb,python-mysqldb,python-pip,python3-pip,unattended-upgrades,python3-pexpect,python-pexpect]
+      name: [mosh,curl,gnupg2,ca-certificates,lsb-release,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,imagemagick,goaccess,python-pip,python3-pip,unattended-upgrades,python-dev,python3-dev]
       state: latest
       force_apt_get: True
       allow_unauthenticated: yes
@@ -58,78 +50,25 @@
   
   when: ansible_distribution == 'Ubuntu'
 
-- block:
-  - name: Create swap Space
-    command: dd if=/dev/zero of=/mnt/swap bs=256M count=8
 
-  - name: Make swap
-    command: mkswap /mnt/swap
+- name: Pip Update
+  pip:
+    name: pip
+    extra_args: --upgrade
 
-  - name: Action swap
-    command: swapon /mnt/swap
-  
-  - name: Add to fstab
-    lineinfile:
-        dest: /etc/fstab
-        regexp: '/mnt/swap'
-        line: "/mnt/swap swap swap defaults 0 0"
-        state: present
-
-  when: (ansible_swaptotal_mb == 0) and (cloud != 'azure')
-
-- block:
-  - name: ResourceDisk EnableSwap
-    lineinfile:
-      dest: /etc/waagent.conf
-      regexp: 'ResourceDisk.EnableSwap=n'
-      line: "ResourceDisk.EnableSwap=y"
-      state: present
-
-  - name: ResourceDisk SwapSizeMB
-    lineinfile:
-      dest: /etc/waagent.conf
-      regexp: 'ResourceDisk.SwapSizeMB=0'
-      line: "ResourceDisk.SwapSizeMB=2048"
-      state: present
-  when: cloud == 'azure'
-
+- name: pip requirements
+  pip:
+    name: [pexpect]
 
 - name: Set swapiness
   sysctl:
     name: vm.swappiness
     value: "10"
 
-
 - name: Fix No space left on device
   sysctl:
     name: fs.inotify.max_user_watches
-    value: "262144"
-
-- block:
-  - name: AWS Configure
-    apt:
-      name: ec2-instance-connect
-      update_cache: yes
-
-  - name: Start ec2-instance-connect
-    service:
-      name: ec2-instance-connect
-      state: started
-      enabled: yes
-  when: cloud == 'aws' and ansible_distribution == 'Ubuntu'
-
-- block:
-  - name: AWS Configure
-    yum:
-      name: ec2-instance-connect
-  
-  - name: Start ec2-instance-connect
-    service:
-      name: ec2-instance-connect
-      state: started
-      enabled: yes
-
-  when: cloud == 'aws' and ansible_distribution == 'Centos'
+    value: "8192000"
 
 - name: Create Dir
   file:
