--- a/roles/mysql/defaults/main.yml
+++ b/roles/mysql/defaults/main.yml
@@ -1,3 +1,16 @@
-mysqlver: 5.6       # centos版本 5.5 5.6 5.7  Ubuntu支持5.7和8.0
+mysql_version: 5.6       # centos版本 5.5 5.6 5.7  Ubuntu支持5.7和8.0
 mysqlcluster_version: 7.6   # 7.5 7.6 8.0
-mysql_password: 123456 # mysql 默认密码
+mysql_root_password: 123456  
+
+
+mysql_databases:
+  name: 
+  collation:
+  encoding:
+  state:
+  
+mysql_users: 
+  name: 
+  host:
+  password: 
+  priv: 
