--- a/roles/mysql/tasks/Ubuntu.yml
+++ b/roles/mysql/tasks/Ubuntu.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install MySQL
   apt:  
-    name: mysql-server
+    name: [mysql-server,python-pymysql]
 
 - name: Change MySQL Directory
   shell: |
@@ -18,28 +18,28 @@
   mysql_user: 
     name: root 
     host: localhost
-    password: "{{mysql_password}}"
+    password: "{{mysql_root_password | default('Websoft9',true)}}"
 
 - name: Removes all anyelse user accounts
   mysql_user:
     login_user: root
-    login_password: "{{mysql_password}}"
+    login_password: "{{mysql_root_password | default('Websoft9',true)}}"
     name: ''
     host_all: yes
     state: absent
 
 - name: Remove hostname user accounts
-  mysql_user: login_user=root login_password={{mysql_password}} name='root' host={{ ansible_nodename }} state=absent
+  mysql_user: login_user=root login_password={{mysql_root_password | default('Websoft9',true)}} name='root' host={{ ansible_nodename }} state=absent
 
 - name: Removes test Databases
   mysql_db:
     login_user: root
-    login_password: "{{mysql_password}}"
+    login_password: "{{mysql_root_password | default('Websoft9',true)}}"
     name: test
     state: absent
 
 - name: Removing privileges on test database
-  command: mysql -uroot -p{{mysql_password}} -e "DELETE FROM mysql.db WHERE Db='test' OR Db='test\\_%'"
+  command: mysql -uroot -p{{mysql_root_password | default('Websoft9',true)}} -e "DELETE FROM mysql.db WHERE Db='test' OR Db='test\\_%'"
 
 - name: del mysql Automatically generated for Debian scripts.
   file:
