--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -1,8 +1,14 @@
 name: Ansible Roles sync
 
+# on: 
+#   schedule:
+#     - cron: '0 */1 * * *'
+
 on: 
-  schedule:
-    - cron: '0 */1 * * *'
+  push:
+    paths: docs/**
+
+
 
 jobs:
   build:
