--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -1,11 +1,8 @@
 name: Ansible Roles sync
 
-# on: 
-#   schedule:
-#     - cron: '0 */1 * * *'
-
 on: 
-  push:
+  schedule:
+    - cron: '0 */1 * * *'
 
 jobs:
   build:
