--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -2,7 +2,7 @@ name: Docs Build and Upload
 
 on: 
   push:
-    paths: docs/**
+    # paths: docs/**
 
 jobs:
   build:
@@ -21,17 +21,17 @@ jobs:
       env:
         CI: true
     
-    - name: Git Push
+    - name: Commit files
       run: |
         cd docs
-        git clone https://github.com/Websoft9/websoft9.github.io.git
-        cp -r html/* websoft9.github.io/docs/
-        echo $(ls websoft9.github.io/docs/)
-        cd websoft9.github.io
-        echo "https://${{ secrets.ACCESS_TOKEN }}" > ~/.git-credentials
-        git config --global credential.helper store
-        git config --global user.email "xu_junkai@foxmail.com"
-        git config --global user.name "Mozlk"
-        git add .
-        git commit -m "Add changes" 
-        git push origin master
+        git config --local user.email "xu_junkai@foxmail.com"
+        git config --local user.name "Mozlk"
+        git commit -m "Update Docs" -a
+
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.TOKEN }}
+        directory: docs
+        repository: https://github.com/Websoft9/websoft9.github.io.git
+
