--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -30,7 +30,7 @@ jobs:
         
     - name: Commit files
       run: |
-        cd websoft9.github.io
+        # cd websoft9.github.io
         git config --local user.email "xu_junkai@foxmail.com"
         git config --local user.name "Mozlk"
         git commit -m "Update Docs" -a
