--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -40,4 +40,4 @@ jobs:
       with:
         github_token: ${{ secrets.TOKEN }}
         directory: docs/websoft9.github.io
-        repository: Websoft9/websoft9.github.io.git
+        repository: Websoft9/websoft9.github.io
