--- a/roles/role_mysql/tasks/main.yml
+++ b/roles/role_mysql/tasks/main.yml
@@ -2,11 +2,11 @@
   pip:
     name: PyMySQL
 
-- import_tasks: CentOS.yml
-  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Amonzon'
+- import_tasks: RedHat.yml
+  when: ansible_os_family == 'RedHat'
 
-- import_tasks: Ubuntu.yml
-  when: ansible_distribution == 'Ubuntu'
+- import_tasks: Debian.yml
+  when: ansible_os_family == 'Debian'
 
 - name: Create MySQL extra databases 
   mysql_db:
