--- a/roles/role_common/tasks/main.yml
+++ b/roles/role_common/tasks/main.yml
@@ -9,9 +9,14 @@
     when: ansible_distribution != 'Amazon'
 
   - name: Install Extra Packages for Enterprise Linux
-    shell: amazon-linux-extras install epel
+    shell: amazon-linux-extras install epel -y
     when: ansible_distribution == 'Amazon'
 
+
+  - name: Install Common Software
+    yum: 
+      name: [mosh,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,ImageMagick,inotify-tools,libselinux-python]
+    
 
   - name: Disable SELinux
     selinux:
@@ -21,10 +26,7 @@
     shell: setenforce 0 
     when: ansible_selinux.status != 'disabled'
 
-  - name: Install Common Software
-    yum: 
-      name: [mosh,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,ImageMagick,inotify-tools]
-    
+
   - name: Install PiP
     yum:
       name: python-pip
