--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,5 @@ roles_path = ./roles/
 display_skipped_hosts = False
 host_key_checking = False
 interpreter_python=/usr/bin/python2
+timeout = 60
+forks = 10
