--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,5 +1,5 @@
-mysql_root_password: 123456
+mysql_root_password: "123456"
 init_db: 
   mysql:
     user: root
-    password: 123456
+    password: "123456"
