--- a/mysql.yml
+++ b/mysql.yml
@@ -9,7 +9,14 @@
     - vars/main.yml
 
   vars_prompt:
-    - name: 'mysql_selection'
+    - name: 'mysql_type_selection'
+      prompt: "\nPlease Select the type of database to install [ 1/2] \n\n
+      1: Container version of mysql\n
+      2: The local mysql\n"
+      private: no
+      default: 1
+
+    - name: 'mysql_version_selection'
       prompt: "\nPlease choose the number for MySQL version [ 1/2/3/4] \n\n
       1: MySQL5.5(only for CentOS7.x, AmazonLinux)\n
       2: MySQL5.6(only for CentOS7.x, AmazonLinux, Ubuntu16.04 )\n
@@ -33,12 +40,19 @@
       default: 1
 
   vars:
-    mysql_select:
+    mysql_version_select:
       '1': '5.5'
       '2': '5.6'
       '3': '5.7'
       '4': '8.0'
-    mysql_version: "{{mysql_select[mysql_selection]}}" 
+    mysql_version: "{{mysql_version_select[mysql_version_selection]}}" 
+
+    mysql_type_select:
+      '1': True
+      'y': True
+      '2': False
+      'n': False
+    mysql_docker: "{{mysql_type_select[mysql_type_selection]}}"
 
     phpmyadmin_select:
       '1': True
