--- a/mysql.yml
+++ b/mysql.yml
@@ -5,9 +5,6 @@
   become_method: sudo
   gather_facts: True
 
-  vars_files:
-    - vars/main.yml
-
   vars_prompt:
     - name: 'mysql_type_selection'
       prompt: "\nPlease Select the type of database to install [ 1/2] \n\n
@@ -66,8 +63,13 @@
       
     phpmyadmin_install_docker: "{{phpmyadmin_select[phpmyadmin_selection]}}" 
     mysql_remote: "{{remote_select[remote_selection]}} or {{phpmyadmin_select[phpmyadmin_selection]}}" 
-    
-  
+
+  pre_tasks:
+    - include_vars: vars/docker.yml
+      when: mysql_docker
+    - debug: 
+        msg: MySql{{mysql_version}} will be install, Container version of MySQL is {{mysql_docker}}
+
   roles:
    - {role: role_common, tags: "role_common"}   
    - {role: role_cloud, tags: "role_cloud"}
