--- a/vars/docker.yml
+++ b/vars/docker.yml
@@ -3,14 +3,9 @@ mysql_root_password: "123456"
 docker_applications: 
   - phpmyadmin
 
-init_docker:
+init_db: 
   mysql:
-    db: mysql
-    db_username: root
-    db_password: "123456"
-    service_after: "docker.service"
-    compose_path: "/data/db/mysql{{mysql_version}}/docker-compose.yml"
-    compose_commands:
+    admin: root
+    password: "123456"  
+    config_paths:
       - sudo sed -i "s/123456/$new_password/g" /data/db/mysql{{mysql_version}}/docker-compose.yml
-    volumes:
-      - /data/db/mysql{{mysql_version}}/data
