--- a/vars/docker.yml
+++ b/vars/docker.yml
@@ -9,3 +9,5 @@ init_db:
     password: "123456"  
     config_paths:
       - /data/db/mysql{{mysql_version}}/docker-compose.yml
+    commands:
+      - sudo docker-compose -f /data/db/mysql{{mysql_version}}/docker-compose.yml up -d
