--- a/mysql.yml
+++ b/mysql.yml
@@ -8,15 +8,15 @@
   vars_prompt:
     - name: 'mysql_type_selection'
       prompt: "\nPlease Select the type of database to install [ 1/2] \n\n
-      1: Container version of mysql\n
-      2: The local mysql\n"
+      1: Docker install\n
+      2: Package install\n"
       private: no
       default: 1
 
     - name: 'mysql_version_selection'
       prompt: "\nPlease choose the number for MySQL version [ 1/2/3/4] \n\n
       1: MySQL5.5(only for CentOS7.x, AmazonLinux)\n
-      2: MySQL5.6(only for CentOS7.x, AmazonLinux, Ubuntu16.04, Container)\n
+      2: MySQL5.6(only for CentOS7.x, AmazonLinux, Ubuntu16.04, Docker)\n
       3: MySQL5.7(Support all)\n
       4: MySQL8.0(Support all)\n"
       private: no
