--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,6 @@
 roles_path = ./roles/
 display_skipped_hosts = False
 host_key_checking = False
-interpreter_python=auto
+interpreter_python=/usr/bin/python3
 timeout = 60
 forks = 10
